--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,25 @@
 		font-size: 62.5%; /* 62.5% of 16px = 10px, i.e. 1rem = 10px */
 	}
 
+	/* Estilização para navegadores baseados em WebKit */
+	::-webkit-scrollbar {
+		width: 10px;
+	}
+
+	::-webkit-scrollbar-track {
+		box-shadow: inset 0 0 5px grey;
+		border-radius: 10px;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background: #8f8f8f;
+		border-radius: 10px;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background: #7f7f7f; /* Cor um pouco mais escura no hover */
+	}
+
 	@keyframes animate-spin {
 		from {
 			transform: rotate(0deg);
